dev/ingress/whale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whale-ingress
  namespace: whale-ns
spec:
  ingressClassName: nginx
  rules:
    - host: whale.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whale-service
                port:
                  number: 10001
